# Gestion-CCSA

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CHANGELOG.md  PRE_COMMIT_GUIDE.md  REPORT_FINAL.md  SECURITY.md  TEST_REPORT.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: security.yml
accounts/: __init__.py  admin.py  admin_views.py  apps.py  context_processors.py  forms.py  managers.py  models.py  services.py  signals.py  test_forms.py  test_views.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_role_pagepermission_permissionhistory_and_more.py  (+4 more)
app/: settings.py  urls.py
backup/: CRON_SETUP.md  __init__.py  admin.py  models.py  urls.py  views.py
events/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  validators.py  views.py  widgets.py
feedback/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
home/: tests.py  urls.py  views.py
leave/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
pointage/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py
reports/: django-security-check.txt
scripts/: install-hook.py  pre-commit-config.json  pre_commit_check.py
templates/: base.html
url_shortener/: admin.py  forms.py  models.py  urls.py  views.py
workflows/: AGENTS.md  django-6-best-practices.md  django-css-separation.md  django-javascript-separation.md  git-best-practices.md  javascript-modern.md  postgresql-sql.md  python-linting.md  security-audit.md  tailwindcss.md
(+214 files in other folders)
